--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  font-family: 'Spline Sans', sans-serif;
+}
+
 body {
-  @apply bg-gray-100 text-gray-900;
-  font-family: "Inter", sans-serif;
+  @apply bg-background-light text-text-main antialiased overflow-hidden;
+}
+
+.dark body {
+  @apply bg-background-dark text-gray-100;
+}
+
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background: #cbd5e1;
+  border-radius: 6px;
 }
